# reflexcoursegpt

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  rxconfig.py
reflex_coursegpt/: base_state.py  reflex_coursegpt.py
reflex_coursegpt/auth/: auth_supabase.py  login.py  registration.py  reset_password.py
reflex_coursegpt/landing_page/: background_v3.py  faq.py  main_content.py  navbar.py  responsive_landing.py
reflex_coursegpt/main_page/: dashboard_state.py  subscription.py
reflex_coursegpt/main_page/dashboard_components/: header.py  maincontent.py
reflex_project_auth/: base_state.py  reflex_project_auth.py
reflex_project_auth/auth/: auth_supabase.py  login.py  registration.py  reset_password.py  supabase__client.py
reflex_project_auth/landing_page/: background_v3.py  faq.py  footer.py  landing_page.py  main_content.py  navbar.py
reflex_project_auth/main_page/: dashboard.py  dashboard_state.py  help.py  subscription.py
reflex_project_auth/main_page/dashboard_components/: header.py  leftbar.py  maincontent.py  rightbar.py
reflex_project_auth/main_page/dashboard_state_comp/: generate.py
romeoved/auth/: auth_supabase.py
