[project]
name = "reflex-project-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10 <4.0"
dependencies = [
    "reflex (>=0.7.0,<0.8.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
