[tool.poetry]
name = "reflex-project-auth"
version = "0.1.0"
description = ""
authors = ["Rodion Gudz <rodion.gudz@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = { version = ">=2.10.1,<3.0.0" }
supabase = { version = ">=2.13.0,<3.0.0" }
python-dotenv = { version = "==1.0.0" }
openai = "^1.63.2"
reflex = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
